# xxx01

./: .gitignore
Libraries/Productivity/Office/: Cargo.toml  README.md
Libraries/Productivity/Office/Engine/docs_engine/: Cargo.toml
Libraries/Productivity/Office/Engine/docs_engine/src/: block.rs  document.rs  lib.rs  ops.rs  selection.rs  session.rs
Libraries/Productivity/Office/Engine/docx-engine/: Cargo.toml
Libraries/Productivity/Office/Engine/docx-engine/src/: document.rs  lib.rs
Libraries/Productivity/Office/Engine/ppt-engine/: Cargo.toml
Libraries/Productivity/Office/Engine/ppt-engine/src/: lib.rs  presenter.rs
Libraries/Productivity/Office/Engine/sheet_engine/: Cargo.toml
Libraries/Productivity/Office/Engine/sheet_engine/src/: ast.rs  cell.rs  eval.rs  formatting.rs  formula.rs  grid.rs  lib.rs  ops.rs  selection.rs  session.rs  structure.rs  validation.rs
Libraries/Productivity/Office/Engine/sheet_engine/tests/: facade_contract.rs
Libraries/Productivity/Office/Engine/slide_engine/: Cargo.toml
Libraries/Productivity/Office/Engine/slide_engine/src/: lib.rs  ops.rs  scene.rs  selection.rs  session.rs  slide.rs
Libraries/Productivity/Office/Parser/Common/ky-of-animation/: Cargo.toml  motion.rs
Libraries/Productivity/Office/Parser/Common/ky-of-chart/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-clipboard/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-color/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-comment/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-common/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-error/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-exporter/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-graphics/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-header-footer/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-html/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-image/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-media/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-ods/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-rtl/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-shape/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-styles/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-svg/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-table/: Cargo.toml
Libraries/Productivity/Office/Parser/Common/ky-of-text/: Cargo.toml
Libraries/Productivity/Office/Parser/Core/ky-of-csv/: Cargo.toml
Libraries/Productivity/Office/Parser/Core/ky-of-docx/: Cargo.toml  README.md  lib.rs  models.rs  parser.rs  writer.rs
Libraries/Productivity/Office/Parser/Core/ky-of-office-core/: Cargo.toml
Libraries/Productivity/Office/Parser/Core/ky-of-pdf/: Cargo.toml  README.md
Libraries/Productivity/Office/Parser/Core/ky-of-xlsx/: Cargo.toml  README.md  xlsx_reader.h
Libraries/Productivity/Office/Plugins/ky_docs/: pubspec.yaml
Libraries/Productivity/Office/Plugins/ky_docs/lib/: ky_docs.dart  office_product.dart
Libraries/Productivity/Office/Plugins/ky_docs/test/: ai_assistant_command_surface_test.dart  blank_document_starter_host_test.dart  blank_document_starter_panel_test.dart  document_action_cluster_test.dart  document_ai_controller_test.dart  document_ai_orchestration_service_test.dart  document_async_operation_service_test.dart  document_canvas_surface_frame_test.dart  document_change_service_test.dart  document_chart_service_test.dart  document_collaboration_controller_test.dart  document_collaboration_controls_test.dart  document_collaboration_orchestration_service_test.dart  document_command_active_result_test.dart  document_command_availability_badge_test.dart  document_command_category_option_test.dart  document_command_empty_state_test.dart  document_command_palette_test.dart  document_command_preview_model_test.dart  document_command_search_test.dart  (+142 more)
Libraries/Productivity/Office/Plugins/ky_office/: .gitignore  pubspec.yaml
Libraries/Productivity/Office/Plugins/ky_office_core/: .gitignore  pubspec.yaml
Libraries/Productivity/Office/Plugins/ky_ppt/: analysis_options.yaml  pubspec.yaml
Libraries/Productivity/Office/Plugins/ky_sheet/: pubspec.yaml
Libraries/Productivity/Office/References/rustdoc-clap-4.0.4/: search-index-20220928-1.66.0-nightly-ce7f0f1aa.js  settings.html  source-files-20220928-1.66.0-nightly-ce7f0f1aa.js
Libraries/Productivity/Office/Sample/: sample01.docx
Libraries/Productivity/Office/Utils/slide_engine_ffi/: Cargo.toml  build.rs  slide_engine_ffi.h
Libraries/Productivity/Office/Utils/tenun-showcase/: README.md  pubspec.yaml
Libraries/Productivity/Waraq/Core/maqal_engine/: Cargo.toml
Libraries/Productivity/Waraq/Core/waraq/: Cargo.toml  README.md  cbindgen.toml  waraq_editor_core.h
gallery_bridge 3/rust_engine/: Cargo.toml  build.rs
gallery_bridge 3/rust_engine/benches/: indexer_bench.rs
gallery_bridge 3/rust_engine/src/: lib.rs
gallery_bridge 3/rust_engine/src/analytics/: mod.rs
gallery_bridge 3/rust_engine/src/api/: mod.rs
gallery_bridge 3/rust_engine/src/collections/: mod.rs
gallery_bridge 3/rust_engine/src/contact_sheet/: mod.rs
gallery_bridge 3/rust_engine/src/db/: mod.rs
gallery_bridge 3/rust_engine/src/duplicate/: mod.rs
gallery_bridge 3/rust_engine/src/edits/: mod.rs
gallery_bridge 3/rust_engine/src/export/: mod.rs
gallery_bridge 3/rust_engine/src/gps/: mod.rs
gallery_bridge 3/rust_engine/src/indexer/: mod.rs
gallery_bridge 3/rust_engine/src/metadata/: mod.rs
gallery_bridge 3/rust_engine/src/print_layout/: mod.rs
gallery_bridge 3/rust_engine/src/rename/: mod.rs
gallery_bridge 3/rust_engine/src/search/: mod.rs
gallery_bridge 3/rust_engine/src/slideshow/: mod.rs
gallery_bridge 3/rust_engine/src/thumbnail/: mod.rs
gallery_bridge 3/rust_engine/src/watcher/: mod.rs
gallery_bridge 3/rust_engine/src/xmp/: mod.rs
gallery_bridge 3/rust_engine/tests/: integration_test.rs
(+18044 files in other folders)
