[workspace]
resolver = "2"
members = [
    # Engine crates (runtime)
    "Engine/docs_engine",
    "Engine/docx-engine",
    "Engine/ppt-engine",
    "Engine/sheet_engine",
    "Engine/slide_engine",
    
    # Parser Core crates
    "Parser/Core/ky-of-docx",
    "Parser/Core/ky-of-pdf",
    "Parser/Core/ky-of-xlsx",
    "Parser/Core/ky-of-csv",
    "Parser/Core/ky-of-office-core",
    "Parser/Core/ky-of-pptx",
    
    # Parser Common crates (reusable across Parser and Engine)
    "Parser/Common/ky-of-common",
    "Parser/Common/ky-of-graphics",
    "Parser/Common/ky-of-ods",
    "Parser/Common/ky-of-animation",
    "Parser/Common/ky-of-chart",
    "Parser/Common/ky-of-clipboard",
    "Parser/Common/ky-of-color",
    "Parser/Common/ky-of-comment",
    "Parser/Common/ky-of-error",
    "Parser/Common/ky-of-exporter",
    "Parser/Common/ky-of-header-footer",
    "Parser/Common/ky-of-html",
    "Parser/Common/ky-of-image",
    "Parser/Common/ky-of-media",
    "Parser/Common/ky-of-rtl",
    "Parser/Common/ky-of-shape",
    "Parser/Common/ky-of-styles",
    "Parser/Common/ky-of-svg",
    "Parser/Common/ky-of-table",
    "Parser/Common/ky-of-text",
]
