[package]
name = "docx_engine"
version = "0.1.0"
edition = "2021"
description = "DOCX document runtime engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ky-of-common = { path = "../../Parser/Common/ky-of-common", features = ["serde-support"] }
ky-of-text = { path = "../../Parser/Common/ky-of-text", features = ["serde-support"] }
ky-of-styles = { path = "../../Parser/Common/ky-of-styles", features = ["serde-support"] }
ky-of-image = { path = "../../Parser/Common/ky-of-image", features = ["serde-support"] }
ky-of-table = { path = "../../Parser/Common/ky-of-table", features = ["serde-support"] }
ky-of-header-footer = { path = "../../Parser/Common/ky-of-header-footer", features = ["serde-support"] }
ky-of-comment = { path = "../../Parser/Common/ky-of-comment", features = ["serde-support"] }


