[package]
name = "maqal_engine"
version = "0.1.0"
edition = "2021"
description = "Jupyter Notebook style engine for Waraq"

[dependencies]
anyhow = "1"
code_engine = { path = "../code_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
waraq-core = { path = "../waraq" }
