[package]
name = "ky-of-chart"
version = "0.1.0"
edition = "2021"
description = "Chart types and utilities for Office documents (Excel, PowerPoint, Word)"
license = "MIT"
repository = "https://github.com/your-org/ky-office"
keywords = ["office", "chart", "ooxml", "excel", "powerpoint"]
categories = ["parsing", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
serde_json = "1"

[features]
serde-support = ["serde"]
default = []

[lib]
path = "src/lib.rs"
