[package]
name = "ky-of-shape"
version = "0.1.0"
edition = "2021"
description = "Reusable shape module for Office Parser and Engine - provides comprehensive shape types, models, and XML parsing for OOXML documents"
license = "MIT"
repository = "https://github.com/your-org/office-parser"
keywords = ["office", "ooxml", "shape", "parser", "excel", "powerpoint", "word"]
categories = ["parsing", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
quick-xml = { version = "0.31", features = ["serialize"] }

[features]
default = []
serde-support = ["serde", "quick-xml/serialize"]

[lib]
path = "src/lib.rs"

[dev-dependencies]

[package.metadata.docs.rs]
features = ["serde-support"]
all-features = false
