[package]
name = "docx_reader"
version = "0.1.0"
edition = "2021"
description = "A comprehensive .docx reader and extractor library for Rust"
license = "MIT"
keywords = ["docx", "word", "document", "extract", "reader"]

[lib]
name = "docx_reader"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
zip = { version = "=0.6.3", default-features = false, features = ["deflate"] }
quick-xml = "=0.30.0"
thiserror = "=1.0.50"
base64 = "=0.21.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
htmlescape = "=0.3.1"

[dev-dependencies]
tempfile = "=3.8.1"
